Closed Bug 1984469 Opened 3 months ago Closed 2 months ago

Assertion failure: false (TakeHttpConnection of Http2Session), at /builds/worker/checkouts/gecko/netwerk/protocol/http/Http2Session.cpp:4011

Categories

(Core :: Networking: HTTP, defect, P2)

defect
Points:
3

Tracking

()

RESOLVED FIXED
145 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr140 --- wontfix
firefox143 --- wontfix
firefox144 --- wontfix
firefox145 --- fixed

People

(Reporter: tsmith, Assigned: kershaw)

References

(Blocks 1 open bug, )

Details

(Keywords: assertion, pernosco, Whiteboard: [necko-triaged] [necko-priority-next])

Attachments

(2 files)

Found with m-c 20250821-7fed0a3528ef (--enable-debug)

This was found by visiting a live website with a debug build.

STR:

  • Launch browser and visit site

This issue was triggered by visiting http://fvhospital.com/.

A Pernosco session is available here: https://pernos.co/debug/TXwsOhMxWfq1soVb2mG-Ow/index.html

Assertion failure: false (TakeHttpConnection of Http2Session), at /builds/worker/checkouts/gecko/netwerk/protocol/http/Http2Session.cpp:4011

8|0|xul.dll|mozilla::net::Http2Session::TakeHttpConnection()|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/Http2Session.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|4011|0x2e
8|1|xul.dll|mozilla::net::nsHttpConnectionMgr::ProcessNewTransaction(mozilla::net::nsHttpTransaction*)|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/nsHttpConnectionMgr.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|1826|0x31d
8|2|xul.dll|mozilla::net::nsHttpConnectionMgr::OnMsgNewTransactionWithStickyConn(int, mozilla::net::ARefBase*)|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/nsHttpConnectionMgr.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|2208|0x176
8|3|xul.dll|mozilla::net::ConnEvent::Run()|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/nsHttpConnectionMgr.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|211|0x27
8|4|xul.dll|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|1153|0x99a
8|5|xul.dll|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|480|0x70
8|6|xul.dll|mozilla::net::nsSocketTransportService::Run()|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsSocketTransportService2.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|1211|0x64d
8|7|xul.dll|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|1153|0x99a
8|8|xul.dll|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|480|0x70
8|9|xul.dll|mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|299|0xc5
8|10|xul.dll|MessageLoop::RunHandler()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:7fed0a3528ef27b3a504543436fd0c7ba2548b21|367|0x3e
8|11|xul.dll|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:7fed0a3528ef27b3a504543436fd0c7ba2548b21|349|0x6e
8|12|xul.dll|nsThread::ThreadFunc(void*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:7fed0a3528ef27b3a504543436fd0c7ba2548b21|366|0x14c
8|13|nss3.dll|_PR_NativeRunThread(void*)|hg:hg.mozilla.org/mozilla-central:nsprpub/pr/src/threads/combined/pruthr.c:7fed0a3528ef27b3a504543436fd0c7ba2548b21|382|0x120
8|14|nss3.dll|pr_root(void*)|hg:hg.mozilla.org/mozilla-central:nsprpub/pr/src/md/windows/w95thred.c:7fed0a3528ef27b3a504543436fd0c7ba2548b21|129|0x10
Severity: -- → S3
Points: --- → 3
Rank: 2
Flags: needinfo?(kershaw)
Priority: -- → P2
Whiteboard: [necko-triaged] [necko-priority-next]

The pernosco session shows that the problem is at this line.
We should not always set NS_HTTP_STICKY_CONNECTION, since doing this means the new channel will carry that flag and reuse the connection.

Flags: needinfo?(kershaw)
Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Pushed by kjang@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/a902f6508e49 https://hg.mozilla.org/integration/autoland/rev/c4c44bf6d76f Set NS_HTTP_STICKY_CONNECTION on an auth retry channel only if the previous channel had this flag, r=necko-reviewers,valentin https://github.com/mozilla-firefox/firefox/commit/baf321c3fd0b https://hg.mozilla.org/integration/autoland/rev/927ed5d4fbe7 Test, r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 2 months ago
Resolution: --- → FIXED
Target Milestone: --- → 145 Branch

:kershaw, does this patch resolve any user facing problem?
I am wondering does it need an uplift request, or should it ride the train?

Flags: needinfo?(kershaw)

(In reply to Donal Meehan [:dmeehan] from comment #6)

:kershaw, does this patch resolve any user facing problem?
I am wondering does it need an uplift request, or should it ride the train?

No, users won't notice the assertion failure that this patch fixed.
We can let this ride the train. Thanks.

Flags: needinfo?(kershaw)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: