Bug 1984469 - Set NS_HTTP_STICKY_CONNECTION on an auth retry channel only if the previous channel had this flag, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D264592